renamed p and renamed ".toList();" for all similar places